--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,16 @@
 CC=gcc
 OBJS=filter.o main.o
 TARGET=main
-
+CFLAG = -Wall
 
 main: filter.o main.o
 	$(CC) $(OBJS) -o $(TARGET) 
 
 main.o: main.c
-	$(CC) -c $<
+	$(CC)  $(CFLAG) -c $<
 
 filter.o: filter.c
-	$(CC) -c $<
+	$(CC) $(CFLAG) -c $<
 
 clean:
 	rm -f *.o
