add some actions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,23 @@
 CC=gcc
 OBJS=filter.o tinyfind.o parser.o
 TARGET=tinyfind
-CFLAG = -Wall -g
-
+CFLAGS = -Wall
+ifneq ($(DEBUG),)
+  CFLAGS += -g -DDEBUG
+else
+  CFLAGS += -O2
+endif
 tinyfind: filter.o tinyfind.o parser.o
 	$(CC) $(OBJS) -o $(TARGET) 
 
 tinyfind.o: tinyfind.c
-	$(CC)  $(CFLAG) -c $<
+	$(CC)  $(CFLAGS) -c $<
 
 filter.o: filter.c 
-	$(CC) $(CFLAG) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 parser.o: parser.c
-	$(CC) $(CFLAG) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 clean:
 	rm -f *.o
